@@ -1,3 +1,8 @@
+Wed Aug 18 12:28:52 2004  George Lebl <jirka@5z.com>
+
+	* gui/gdmsetup.c: Fix #143707 by using Exclude= as well for
+	  the dropdown lists.
+
 Wed Aug 18 12:15:39 2004  George Lebl <jirka@5z.com>
 
 	* gui/gdmlanguages.c: Fix #150293 by adding localized name for
